Fix visited link color in dark mode

--- a/templates/html/static/dj-variables.css
+++ b/templates/html/static/dj-variables.css
@@ -110,6 +110,6 @@
 
     /* Accents */
     --c-linkblue: lightblue;
-    --c-linkpurple: purple;
+    --c-linkpurple: rgb(232, 120, 232);
   }
 }
